============================
Change log for gocept.jsform
============================

0.7 (unreleased)
================

- Nothing changed yet.


0.6 (2013-09-06)
================

- Bugfix: Use ``indexOf`` instead of ``startsWith``, which is not available on
  all browsers.


0.5 (2013-09-06)
================

- Declare ``for`` attribute on form labels.

- Store "save on change" subscriptions so they can be cancelled.

- Ignore ``null`` values for data fields. (#1)


0.4 (2013-08-27)
================

- Made it possible to define templates as template files on file system.


0.3 (2013-08-27)
================

- Add events ``after-load`` and ``after-save``.

- Fix ``JSON`` serialization to be able to handle Knockout observables.

- Added ``reload`` functionality to the form class.


0.2 (2013-08-26)
================

- Made it possible to preselect values in arrays when the form is rendered.

- Changed form submit behaviour:

  - Default submit type is not ``POST`` instead of ``GET``. (Change it with the
    ``save_type`` option)

  - Data is now submitted as ``JSON`` type.


0.1 (2013-08-17)
================

initial release